# fde-agent-starter

./: .gitignore  README.md  docker-compose.dev.yml  pyproject.toml  run.py
adapters/: claude.py
examples/: seed_demo.sql
prompts/: system.md
tools/: server.py  sql.py
